<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_map"
        android:icon="@drawable/ic_map"
        android:title="@string/nav_map" />
    <item
        android:id="@+id/nav_price"
        android:icon="@drawable/ic_price"
        android:title="@string/nav_price" />
    <item
        android:id="@+id/nav_distance"
        android:icon="@drawable/ic_near_me"
        android:title="@string/nav_distance" />
    <item
        android:id="@+id/nav_favorites"
        android:icon="@drawable/ic_favorites"
        android:title="@string/nav_favorites" />
    <item
        android:id="@+id/nav_preferences"
        android:icon="@drawable/ic_settings"
        android:title="@string/nav_preferences" />
</menu>